--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800;900&display=swap");
 
-html,
-body {
+* {
+  box-sizing: border-box;
+}
+
+html, body {
   padding: 0;
   margin: 0;
   font-family: "Inter", serif; /*DEBUG*/
@@ -10,8 +13,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
 }
