--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,22 +1,100 @@
 .c_section {
-    position: relative;
-    width: 100%;
-    max-width: 1440px;
-    margin: 200px auto;
     display: flex;
-    align-content: center;
+    align-items: flex-start;
+    justify-content: center;
+
+    margin: 70px auto 0;
+    padding: 0 20px;
+
+    width: 100%;
+
+    max-width: 1600px;
+
+    color: white;
+}
+
+/*
+.c_test {
+    display: flex;
+    align-items: stretch;
+    flex-direction: column;
+    width: 100%;
+}
+
+.c_1 {
+    background-color: red;
+    flex: 1;
+}
+
+.c_2 {
+    background-color: blue;
+    flex: 1;
+}*/
+
+/*.c_desktop {
+    display: none;
+    position: relative;
+    justify-content: center;
+    align-items: stretch;
+    flex-direction: column-reverse;
+    width: 100%;
+}
+
+.c_tablet {
+    display: none;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: stretch;
+    width: 100%;
+    height: 100%;
+}
+
+.c_sub {
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
+}*/
+/*
+.c_mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}*/
+
+
+.c_grid {
+    display: grid;
+/*    grid-template-columns: fit-content(1fr) fit-content(1fr);
+    grid-template-rows: fit-content(1fr) fit-content(1fr);*/
+    grid-template: auto 1fr auto  / 1fr;
+
+    width: 100%;
+    gap: 40px;
+}
+
+.child_1 {
+
+}
+
+.child_2 {
+
+}
+
+.child_3 {
+
 }
 
 .b_img {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 48%;
     position: relative;
-    margin: 0 2% 0 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+    height: 100%;
     border-radius: 5px;
     background: linear-gradient(270deg, #F9DCDC 0%, #FDB7B7 35.94%, #131313 100%, #111111 100%);
-
     box-shadow: 10px 0 15px #232323, -10px 0 15px #0B0B0B;
 }
 
@@ -25,18 +103,20 @@
     position: absolute;
     top: 0; right: 0; left: 0; bottom: 0;
     background: linear-gradient(270deg, #1B1B1B 0%, #131313 100%, #131313 100%);
-
     margin: 2px;
     border-radius: 4px;
 }
 
 .c_img {
-    margin: auto 63px;
+    margin: 50px;
+
     position: relative;
     width: 100%;
     height: 100%;
     max-width: 450px;
     max-height: 243px;
+/*    min-width: 150px;
+    min-height: 100px;*/
 }
 
 .img {
@@ -44,52 +124,100 @@
     height: 100%;
 }
 
+/*
 .c_bio {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
     color: white;
-    width: 48%;
-    margin: 0 0 0 2%;
 }
+*/
 
 .h1 {
     font-weight: 600;
     font-size: 40px;
     letter-spacing: 0.08em;
+    margin: auto;
+}
+
+.h1_span {
+    font-weight: normal;
+    font-size: 24px;
+    letter-spacing: initial;
+    margin: auto;
 }
 
 .h2 {
     font-weight: normal;
-    font-size: 24px;
+    font-size: 16px;
+    margin: auto;
+}
+
+.h3 {
+    position: relative;
+    text-align: left;
+    font-size: 16px;
+    font-weight: normal;
+    margin: auto;
 }
 
 /* Small devices up to 768px (Landscapes phone)*/
-@media (min-width: 576px) {
-    .c_section {
-        padding: 0 40px;
-    }
-}
+/*@media (min-width: 576px) {
+
+}*/
 
 /* Medium devices up to 992px (Tablets) */
 @media (min-width: 768px) {
-    .name {
+    .c_section {
+        padding: 0 40px;
+    }
+
+    .child_1 {
+        grid-column: 1/-1;
+    }
+
+    .c_grid {
+        grid-template: auto 1fr / repeat(2, 1fr);
+    }
+
+    .h2 {
         font-size: 24px;
+    }
+
+    .h1_span {
+        font-size: 40px;
+        letter-spacing: 0.08em;
     }
 }
 
 /* Large devices up to 1200px (Desktops) */
 @media (min-width: 992px) {
-    .c_nav_desktop {
-        display: flex;
+    .child_1 {
+        grid-column: auto;
     }
 
-    .c_nav_mobile {
-        display: none;
+    .child_2 {
+        grid-row: 1/-1;
     }
 }
 
 /* Extra Large devices up to 1440px (Large desktops)*/
+/*
 @media (min-width: 1200px) {
+
+}*/
+/*
+@media (min-height: 700px) and (min-width: 768px){
     .c_section {
-        padding: 0 80px;
+        align-items: center;
+        height: 90vh;
+    }
+}*/
+
+@media (min-height: 700px) {
+    .c_section {
+        align-items: center;
+        height: 90vh;
     }
 }
