--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -3,87 +3,22 @@
     align-items: flex-start;
     justify-content: center;
 
-    margin: 70px auto 0;
+    margin: 70px auto 100px;
     padding: 0 20px;
 
     width: 100%;
-
     max-width: 1600px;
+    min-width: 180px;
 
     color: white;
 }
 
-/*
-.c_test {
-    display: flex;
-    align-items: stretch;
-    flex-direction: column;
-    width: 100%;
-}
-
-.c_1 {
-    background-color: red;
-    flex: 1;
-}
-
-.c_2 {
-    background-color: blue;
-    flex: 1;
-}*/
-
-/*.c_desktop {
-    display: none;
-    position: relative;
-    justify-content: center;
-    align-items: stretch;
-    flex-direction: column-reverse;
-    width: 100%;
-}
-
-.c_tablet {
-    display: none;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: stretch;
-    width: 100%;
-    height: 100%;
-}
-
-.c_sub {
-    display: flex;
-    align-items: stretch;
-    justify-content: center;
-}*/
-/*
-.c_mobile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}*/
-
-
 .c_grid {
     display: grid;
-/*    grid-template-columns: fit-content(1fr) fit-content(1fr);
-    grid-template-rows: fit-content(1fr) fit-content(1fr);*/
     grid-template: auto 1fr auto  / 1fr;
 
     width: 100%;
     gap: 40px;
-}
-
-.child_1 {
-
-}
-
-.child_2 {
-
-}
-
-.child_3 {
-
 }
 
 .b_img {
@@ -115,24 +50,12 @@
     height: 100%;
     max-width: 450px;
     max-height: 243px;
-/*    min-width: 150px;
-    min-height: 100px;*/
 }
 
 .img {
     width: 100%;
     height: 100%;
 }
-
-/*
-.c_bio {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    color: white;
-}
-*/
 
 .h1 {
     font-weight: 600;
@@ -161,11 +84,6 @@
     font-weight: normal;
     margin: auto;
 }
-
-/* Small devices up to 768px (Landscapes phone)*/
-/*@media (min-width: 576px) {
-
-}*/
 
 /* Medium devices up to 992px (Tablets) */
 @media (min-width: 768px) {
@@ -201,19 +119,6 @@
         grid-row: 1/-1;
     }
 }
-
-/* Extra Large devices up to 1440px (Large desktops)*/
-/*
-@media (min-width: 1200px) {
-
-}*/
-/*
-@media (min-height: 700px) and (min-width: 768px){
-    .c_section {
-        align-items: center;
-        height: 90vh;
-    }
-}*/
 
 @media (min-height: 700px) {
     .c_section {
