--- a/styles/Separator.module.css
+++ b/styles/Separator.module.css
@@ -6,3 +6,12 @@
     max-width: 1600px;
     height: 20px;
 }
+
+.hr {
+    background: linear-gradient(to right, #111111, #FDB7B7, #F9DCDC, #FDB7B7, #111111);
+    box-shadow: 0 -2px 5px #252525, 0 2px 5px #000000;
+    height: 2px;
+    width: 100%;
+    max-width: 600px;
+    border: 1px transparent;
+}
