--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -3,7 +3,7 @@
     align-items: flex-start;
     justify-content: center;
 
-    margin: 70px auto 100px;
+    margin: 70px auto;
     padding: 0 20px;
 
     width: 100%;
