--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,8 @@
 .mainContainer {
   width: 100%;
   background-color: #111111;
+  color: white;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
