- skills.js : Finialisation, section AOK (pour le moment tout du moins). - separator.js : X disaply: none sur version mobile (plus simple, plus cohérent ?)

--- a/styles/Skills.module.css
+++ b/styles/Skills.module.css
@@ -1,15 +1,104 @@
 .c_section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
+    width: 100%;
+    max-width: 1600px;
+    padding: 0 20px;
 }
 
 .h2 {
-
-}
-
-.h3 {
-
+    font-size: 30px;
+    font-style: normal;
+    letter-spacing: 0.2em;
+    margin: 0 0 80px 0;
 }
 
 .c_grid {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+
+    width: 100%;
+    height: 400px;
+    max-width: 400px;
+
+}
+
+.child_1 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    border: 2px solid;
+    border-image: linear-gradient(27deg, #F9DCDC 0%, #FDB7B7 20.39%, #111111 50%) 1;
+    background: linear-gradient(27deg, #171717 0%, #111111 50%);
+    box-shadow: -10px 6px 10px #0B0B0B;
+}
+
+.child_2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    border: 2px solid;
+    border-image: linear-gradient(207deg, #F9DCDC 0%, #FDB7B7 20.39%, #111111 50%) 1;
+    background: linear-gradient(207deg, #171717 0%, #111111 50%);
+    box-shadow: 10px -1px 10px -7px #000000;
+}
+
+.c_skill_hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 40px 0;
+}
+
+.c_skill_list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.h3 {
+    font-size: 20px;
+    font-weight: normal;
+    text-align: center;
+    text-decoration: underline;
+    margin: 0;
+    height: 40%;
+}
+
+.p {
+    margin: 3px 0;
+    font-size: 16px;
+    font-weight: normal;
+    text-align: center;
+
+}
+
+.img {
+    height: 50px;
+}
+
+/* Small devices up to 768px (Landscapes phone)*/
+@media (min-width: 576px) {
+
+}
+
+/* Medium devices up to 992px (Tablets) */
+@media (min-width: 768px) {
+    .c_section {
+        padding: 0 40px;
+    }
+}
+
+/* Large devices up to 1200px (Desktops) */
+@media (min-width: 992px) {
+
+}
+
+/* Extra Large devices up to 1440px (Large desktops)*/
+@media (min-width: 1200px) {
 
 }
