--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -3,7 +3,7 @@
     align-items: flex-start;
     justify-content: center;
 
-    margin: 70px auto;
+    margin: 70px auto 0;
     padding: 0 20px;
 
     width: 100%;
@@ -43,15 +43,15 @@
 }
 
 .c_img {
-    margin: 50px;
-
     position: relative;
+    margin: 40px;
     width: 100%;
     height: 100%;
     max-width: 450px;
     max-height: 243px;
 }
 
+/*TODO fusionner avec c_img ?*/
 .img {
     width: 100%;
     height: 100%;
