--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -3,11 +3,9 @@
     align-items: flex-start;
     justify-content: center;
 
-    margin: 70px auto 0;
-    padding: 0 20px;
+    margin: 0 auto;
 
     width: 100%;
-    max-width: 1600px;
     min-width: 180px;
 
     color: white;
@@ -87,10 +85,6 @@
 
 /* Medium devices up to 992px (Tablets) */
 @media (min-width: 768px) {
-    .c_section {
-        padding: 0 40px;
-    }
-
     .child_1 {
         grid-column: 1/-1;
     }
@@ -123,6 +117,6 @@
 @media (min-height: 700px) {
     .c_section {
         align-items: center;
-        height: 90vh;
+        height: 86vh;
     }
 }
