--- a/styles/Exps.module.css
+++ b/styles/Exps.module.css
@@ -3,8 +3,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    max-width: 1600px;
-    padding: 0 20px;
+    margin-bottom: 20px;
 }
 
 .h2 {
@@ -46,6 +45,7 @@
 }
 
 .c_card {
+    min-height: 390px;
     transition: all 0.8s;
     position: relative;
     display: flex;
