--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,12 +2,28 @@
   width: 100%;
   background-color: #111111;
   color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
+  margin: auto;
 }
 
 .c_content {
+  display: flex;
+  width: 100%;
+  max-width: 1600px;
+  min-width: 180px;
+  margin: 75px auto 0;
+  padding: 0 20px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
+/* Medium devices up to 992px (Tablets) */
+@media (min-width: 768px) {
+  .c_content {
+    padding: 0 40px;
+  }
+
+  .name {
+    font-size: 24px;
+  }
 }
