--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,5 +1,5 @@
 .box {
-    z-index: 1;
+    z-index: 2;
     position: fixed;
     height: 70px;
     width: 100%;
@@ -33,24 +33,69 @@
     align-items: center;
 }
 
-.c_logo {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 290px;
-}
-
 .name {
     font-weight: 600;
     font-size: 20px;
     letter-spacing: 0.1em;
 }
 
-.link {
-    font-weight: normal;
-    font-size: 20px;
-    padding: 8px;
+.c_links {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 660px;
+    margin-top: 13px;
+}
 
+.c_logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+}
+
+.logo {
+    width: 50px;
+}
+
+.c_underline {
+    display: flex;
+    width: 100%;
+    height: 10px;
+}
+
+.underline {
+
+    margin-bottom: 0;
+    margin-right: 0;
+    border: none;
+    height: 1px;
+    background: linear-gradient(to right, #111111 15%, #FDB7B7 45%, #F9DCDC, #FDB7B7 55%, #171717 85%);
+    width: 150px;
+    transition: 0.5s ease-in-out;
+}
+
+.link {
+    cursor: pointer;
+    text-align: center;
+    display: inline-block;
+    width: 150px;
+    font-weight: normal;
+    font-size: 16px;
+    margin-bottom: 0;
+}
+
+#about:hover ~ .c_underline > hr {
+    margin-right: 510px;
+}
+
+#skills:hover ~ .c_underline > hr {
+    margin-right: 360px;
+}
+
+#exps:hover ~ .c_underline > hr {
+    margin-right: 150px;
 }
 
 .language {
@@ -61,11 +106,6 @@
 .hamburger_menu {
     height: 100%;
     display: flex;
-}
-
-/* Small devices up to 768px (Landscapes phone)*/
-@media (min-width: 576px) {
-
 }
 
 /* Medium devices up to 992px (Tablets) */
@@ -88,9 +128,4 @@
     .c_nav_mobile {
         display: none;
     }
-}
-
-/* Extra Large devices up to 1440px (Large desktops)*/
-@media (min-width: 1200px) {
-
 }
