--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -27,7 +27,7 @@
     flex: 1;
     height: 100%;
     border-radius: 5px;
-    background: linear-gradient(270deg, #F9DCDC 0%, #FDB7B7 35.94%, #131313 100%, #111111 100%);
+    background: linear-gradient(to left, #F9DCDC 0%, #FDB7B7 35.94%, #131313 100%, #111111 100%);
     box-shadow: 10px 0 15px #232323, -10px 0 15px #0B0B0B;
 }
 
