Changement de repos remote.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,8 @@
 html, body {
   padding: 0;
   margin: 0;
+  background-color: #111111;
+  color: white;
   font-family: "Inter", serif; /*DEBUG*/
 }
 
