. navbar.js, mobile_menu.js: - Link react-scroll                              + ajout de balises a avec href pour le routing
. globals.css: ajout du smooth scroll
. Changement des ids de chaque section: about.js, skills.js, exps.js, contact.js.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@ html, body {
   background-color: #111111;
   color: white;
   font-family: "Inter", serif; /*DEBUG*/
+  scroll-behavior: smooth;
 }
 
 a {
